--- a/projects/twitch-api/style.css
+++ b/projects/twitch-api/style.css
@@ -50,10 +50,10 @@ body{
 
 .userDiv{
     display: flex;
-    background: white;
     height: 5em;
     border-right: 5px #426E7A solid;
     border-left: 5px #426E7A solid;
+    
 }
 
 img{
@@ -66,7 +66,7 @@ img{
 }
 
 .displayName{
-    color: red;
+    color: white;
     text-decoration: none;
     /* padding-left: 3em; */
     padding-top: 1.5em;
@@ -81,4 +81,25 @@ img{
     padding-top: 1.5em;
     font-family: 'Courier New', Courier, monospace;
     
+}
+
+.online{
+    border:2px rgb(143, 255, 143) solid;
+}
+
+.offline{
+    border:2px rgb(255, 85, 85) solid;
+}
+
+a{
+    margin: 0em 5em;
+    padding-top: 1.5em;
+    text-decoration: none;
+    color: red;
+    
+    
+}
+
+p{
+    padding-top: 1.5em;
 }
